Draft update for v3.4

--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -183,8 +183,12 @@
 
             <div class="vr"></div>
 
-            <li class="nav-item">
-                <a class="nav-link" style="color: red;" href="/tournament">THPS3+4 Tournament</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: red;">THPS3+4 Tournament</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="/tournament">Rules & Info</a></li>
+                    <li><a class="dropdown-item" href="/tournament/lb">Leaderboard/Seeding</a></li>
+                </ul>
             </li>
         </ul>
         <ul class="navbar-nav social ml-autio">
