--- a/srlc/srl/templates/srl/tourney.html
+++ b/srlc/srl/templates/srl/tourney.html
@@ -25,44 +25,60 @@
         <table id="privacy" class="privacy">
             <thead>
                 <tr>
-                    <th colspan="3" id="top" class="bg-info">THPS3+4 Speedrun Mode Tournament</th>
+                    <th colspan="3" id="top" class="bg-info">THPS3+4 Speedrun Mode Tournament Rules and Information</th>
                 </tr>
             </thead>
             <tbody>
                 <td>
                     <div class="markdown-body">
-                        <h3>Prize Pool: $700</h3>
+                        <center><h3>Prize Pool: $750</h3>
                         <h3>Single-Elimination</h3>
                         <h3>Best-of-3 [Semifinals and Finals is Best-of-5]</h3>
+                        <br />
+                        | <a href="#timeline">Season Timeline</a> | <a href="#winnings">Winnings</a> | <a href="#qualifying">Qualifying Rules</a> | <a href="#tourney">Tournament Rules</a> | <a href="#striking">Striking</a> | <a href="#async">Async</a> |</center>
                         <hr />
 
-                        <h3>Season Timeline:</h3>
+                        <h3 id="timeline">Season Timeline:</h3>
                         <ul>
-                            <li>Now - July 18: Speedrun Embargo (Enjoy the game!!)</li>
-                            <li>July 18 - July 20: Pre-Season</li>
-                            <li>July 20 - July 27: Qualifying</li>
+                            <li><s>Now - July 18: Speedrun Embargo (Enjoy the game!!)</s></li>
+                            <li>July 16 - July 27: Qualifying</li>
                             <li>July 27: Seeding + Final Checks</li>
                             <li>July 28 - ???: Tournament</li>
                         </ul>
+                        <hr />
 
-                        <h3>Winnings ($700 Prize Pool)</h3>
+                        <h3 id="winnings">Winnings:</h3>
                         <ul>
-                            <li>1st: $325</li>
-                            <li>2nd: $175</li>
-                            <li>3rd: $125</li>
+                            <li>1st: $350</li>
+                            <li>2nd: $200</li>
+                            <li>3rd: $125
+                                <ul>
+                                    <li>There will be a "Third-Place" Match to determine third and fourth before the Finals.</li>
+                                </ul>
+                            </li>
                             <li>4th: $75</li>
-                            <li>If you wanna donate to the prize pool, lemme know!</li>
-                            <li>(Initial: $550; Anonymous: $100; Pete: $50)
                         </ul>
-
-                        <h3>Qualifying Information</h3>
+                        <h3>Donators:</h3>
+                        <p>If you want to donate to the prize pool, let Packle know in the Discord! And let him know if you want credit!</p>
                         <ul>
-                            <li>All runners are required to join the <a href="/discord" target="_blank">THPS Speedrun Discord</a> and agree to the community rules. No exceptions.</li>
-                            <li>PLEASE make sure your Discord name in this server is the same (or similar enough to) what is on here!</li>
-                            <li>6 maps will be selected from the pool before qualifying begins, excluding newly introduced maps:
+                            <li>Packle: $550</li>
+                            <li>Anonymous: $100</li>
+                            <li>Pete: $50</li>
+                            <li>The_Doinstir: $50</li>
+                        </ul>
+                        <hr />
+
+                        <h3 id="qualifying">Qualifying Rules:</h3>
+                        <ul>
+                            <li>All runners are required to join the <a href="/discord" target="_blank">THPS Speedrun Discord</a> and agree to the community rules. No exceptions.
+                                <ul>
+                                    <li>PLEASE make sure your Discord name in this server is the same (or similar enough to) what is on here!</li>
+                                </ul>
+                            </li>
+                            <li>Qualifying levels are as follows:
                                 <ul>    
-                                    <li>THPS3: Foundry + 2 Random</li>
-                                    <li>THPS4: College + 2 Random</li>
+                                    <li>THPS3: Foundry, Airport, Los Angeles</li>
+                                    <li>THPS4: College, San Francisco, Shipyard</li>
                                 </ul>
                             </li>
                             <li>Tournament will use the Points system seen on this site to determine seeding. Tie-breakers are, in order:
@@ -74,16 +90,182 @@
                                     <li>Coin Flip</li>
                                 </ol>
                             </li>
-                            <li>[!] Runners will need to input a tag in the description of the submission for their run to count.
+                            <li>[!] Runners will need to input a <code>THPSTourney</code> in the description of the submission for their run to count!
                                 <ul>
                                     <li>This is to easily distinguish between who doesn't want to play and who does.</li>
-                                    <li>If you submit a run, but forget to include the tag or would like to submit it after approval; lemme know!</li>
+                                    <li>If you submit a run, but forget to include the tag or would like to submit it after approval; re-submit with the tag!</li>
                                 </ul>
                             </li>
-                            <li>A special page will be shown on this site to display up-to-date/approved runs, separate from the real THPS3+4 boards.</li>
+                            <li>The leaderboard/updated seeding is here: <a href="/tournament/lb">https://thps.run/tournament/lb</a>.</li>
+                        </ul>
+                        <hr />
+
+                        <h3 id="tourney">Tournament Rules:</h3>
+                        <h4>Round Timer:</h4>
+                        <ul>
+                            <li>Exact timings of Rounds will be revealed before tournament begins (need help researching).</li>
+                            <li>If it is a PC vs console matchup, both players MUST agree to start at the same time. If this happens, console is still given their extra time at the end of play. Otherwise, the console player starts first.</li>
+                            <li>In the event of a crash, the timer will stop and the non-crashed player will be notified to pause AFTER their current run. Upon the crashed player returning, play will resume with the crashed player getting 30 seconds added to their side (note: this is only once per Match, not level).</li>
+                        </ul>
+                        <hr />
+
+                        <h4>Round Rules:</h4>
+                        <ul>
+                            <li>Before the timer starts, both players will load into the map chosen. On "Go", you will press "Reset Run" on the pause menu.</li>
+                            <li>On "Go", each player has to get the best completion time within the time limit.
+                                <ul>
+                                    <li>On a run being complete, please give the referee a quick second to note your time.</li>
+                                    <li>Runs that start before Round Timer expires are allowed (Overtime).</li>
+                                </ul>
+                            </li>
+                            <li>Unlike regular SRC/thps.run rules, accidental pauses are allowed and do not invalidate your run. However, if it is a PB, it still cannot be submitted.
+                                <ul>
+                                    <li>Pauses are still counted towards the Round Timer. If you need to step away for a moment, you will not get that time back.</li>
+                                </ul>
+                            </li>
+                            <li>When five (5) minutes remain, both players will be mentioned in a race-specific Discord channel. This repeats with 2 minutes and 30 seconds remaining. When time expires, it will be noted.
+                                <ul>
+                                    <li>Livesplit timer will be streamed to the channel to use that as your Round timer.</li>
+                                </ul>
+                            </li>
+                            <li>The player with the lowest time wins the Round. All matches prior to the Semifinals are Best-of-3; Semifinals and Finals are Best-of-5.
+                                <ul>
+                                    <li>In the incredibly unlikely event of a tie, the Round will be reset with a five (5) minute timer (TBD for consoles). This continues until the winner is decided (Sudden Death).</li>
+                                </ul>
+                            </li>
                         </ul>
 
-                        <h3>Tournament Rules will be shown closer to the event, but it is pretty much the same as THPS1+2's except for map striking.</h3>
+                        <h4>Streaming Rules:</h4>
+                        <ul>
+                            <li>Streaming schedule will be determined after seeding closes. These runs will be shown off on the <a href="https://twitch.tv/thps">Community Twitch channel</a>.
+                                <ul>
+                                    <li>Runners will stream their game onto either a Twitch channel or to Discord for capturing.</li>
+                                    <li>Runners will be server-muted so they can concentrate on their game.
+                                        <ul>
+                                            <li>If you watch the commentary on Twitch, please make sure it doesn't come through on stream.</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>If a match is not streamed to the main Twitch channel, runners will still stream their match-up to Twitch (especially in cases a referee isn't available).
+                                <ul>
+                                    <li>Make sure that VODs are enabled for your channel and you have space for it!!!!</li>
+                                </ul>
+                            </li>
+                        </ul>
+
+                        <h4>Runner Responsibilities:</h4>
+                        <ul>
+                            <li>If you are going to switch platforms, let a referee know ahead of time.</li>
+                            <li>It is your job to work with your opponent on a time for the match; if you are having issues with this, please let Packle know.
+                                <ul>
+                                    <li>For streamed matches, you will need to work with Packle.</li>
+                                    <li>If times cannot align, you have the option to perform an "Async" run. Check the <a hre="#async">Async section</a> for information.</li>
+                                </ul>
+                            </li>
+                            <li>If you decided on a time and need to change it later (life happens), let both your opponent and referee know (especially if it is a streamed match).</li>
+                            <li>All server rules apply to streamed matches. You will be disqualified immediately and banned from the server - regardless of seed, placement, or current round - if you are a fucking idiot.</li>
+                        </ul>
+                        <hr />
+
+                        <h3 id="striking">Striking Rules:</h3>
+                        <p>When an <a href="#async">async attempt</a> is needed, all levels are randomized. Both players will need to agree to this. See the async section for more information.</p>
+                        <h4>Best-Of-3 (BO3)</h4>
+                        <ul>
+                            <li>Levels
+                                <ul>
+                                    <li><b>Starter</b>: Foundry, Canada, Suburbia, Airport, Los Angeles, Cruise Ship</li>
+                                    <li><b>Counter-Picks</b>: College, San Francisco, Alcatraz, Waterpark, Shipyard, London, Pinball</li>
+                                </ul>
+                            </li>
+                            <li>Round 1
+                                <ul>
+                                    <li>Coin flip to decide who strikes first.</li>
+                                    <li>Order is 2 - 2 - 1. Remaining level from starters is played.</li>
+                                </ul>
+                            <li>Round 2 + 3
+                                <ul>
+                                    <li>Winner of previous Round strikes five (5) levels, loser chooses from what remains.</li>
+                                </ul>
+                            </li>
+                            <li>Additional Rules
+                                <ul>
+                                    <li>Unless both players agree to it, you cannot return to a level you already won on.</li>
+                                    <li>Both players can agree to an "all random" setup from both Starter and Counter-Pick pools. Referee/third-party must randomize it in a generator, removing levels upon one being completed.</li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <h4>Best-Of-5 (BO5)</h4>
+                        <ul>
+                            <li>Levels
+                                <ul>
+                                    <li><b>Starter</b>: Foundry, Canada, Suburbia, Airport, Los Angeles, Cruise Ship, College, San Francisco, Alcatraz, Shipyard, London</li>
+                                    <li><b>Counter-Picks</b>: Waterpark, Pinball</li>
+                                </ul>
+                            </li>
+                            <li>Round 1
+                                <ul>
+                                    <li>Coin flip to decide who strikes first.</li>
+                                    <li>Order is 1 - 2 - 2 - 2 - 1. Winner picks from what remains.</li>
+                                </ul>
+                            <li>Round 2 - 5
+                                <ul>
+                                    <li>Winner of previous Round strikes five (5) levels, loser chooses from what remains.</li>
+                                </ul>
+                            </li>
+                            <li>Additional Rules
+                                <ul>
+                                    <li>Unless both players agree to it, you cannot return to a level you already won on.</li>
+                                    <li>Both players can agree to an "all random" setup from both Starter and Counter-Pick pools. Referee/third-party must randomize it in a generator, removing levels upon one being completed.</li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <h4>Finals (BO5)</h4>
+                        <ul>
+                            <li>All maps are in play. Referee/third-party must randomize the levels in a generator, removing levels upon one being completed.
+                        </ul>
+                        <hr />
+
+                        <h3 id="async">Async Rules:</h3>
+                        <p>Async (short for Asynchronous) is a style of run that was introduced with the 2023 THPS League and is seen through several other communities. In short, it allows for runners to perform their attempts for an event setting ahead of time. They do, however, have additional rules that must be followed.</p>
+                        <ul>
+                            <li>There are no penalties for declaring a need for an async match. We'd prefer this to be as few as possible, but life happens!</li>
+                            <li>Runners must make an attempt to schedule their matches. If it isn't possible, contact a referee (or Packle) to confirm whether you can conduct an async run.</li>
+                            <li>Once an async run is declared, the following rules apply for level selection:
+                                <ul>
+                                    <li style="text-color:red">The second runner will be notified of the async attempt. All three (3) or five (5) levels will be randomized.
+                                        <ul>
+                                            <li>Async runner will receive the levels very shortly before the start of their attempt.</li>
+                                            <li>The non-async runner will receive the levels before the start of the "match".</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>The following rules apply for the attempt itself:
+                                <ul>
+                                    <li>Game audio must be audible. Mic is not required.</li>
+                                    <li>The runner will be given a day or two to conduct your attempt. This will usually be a day or two before the actual "match" start date.</li>
+                                    <li>Prior to the start of their attempt, the referee will declare a random cosmetic or pro skater clothing style that must be worn by the skater.</li>
+                                    <li>The runner will be given an unlisted Twitch channel to stream their attempt to.
+                                        <ul>
+                                            <li>VODs will be enabled, but save a local recording too (if possible)!</li>
+                                        </ul>
+                                    </li>
+                                    <li>The runner must place a timer on their overlay. They can either have it countdown from their specific platform's time or countup towards it.</li>
+                                    <li>Once the timer starts, it cannot be stopped for any reason or the entire attempt is forefit.
+                                        <ul>
+                                            <li>Pausing rules from <a href="#tourney">the tournament rules section</a> apply - you are allowed to pause the RUN, but the timer must continue.</li>
+                                        </ul>
+                                    </li>
+                                    <li>All three (or five) levels must be played back-to-back. You are allowed a two (2) minute break between Rounds.
+                                        <ul>
+                                            <li>I am not going to heavily enforce the break rule. If something genuinely happens, let us know ASAP.</li>
+                                        </ul>
+                                    </li>
+                                    <li>For community-streamed matches, the async attempts will be played alongside the non-async player. For other matches, the attempt will be streamed on the Discord channel.</li>
+                                </ul>
+                            </li>
+                        </ul>
                     </td>
                 </div>
             </tbody>
