--- a/srlc/srl/templates/srl/tourney_lb.html
+++ b/srlc/srl/templates/srl/tourney_lb.html
@@ -65,7 +65,7 @@
         <table id="leaderboardTable" class="table table-striped table-light table-hover">
             <thead>
                 <tr>
-                    <th colspan="3" class="bg-info">Qualifying Ends at <a href="https://time.is/compare/1200AM_27_July_2025_in_New_York" target="_blank">July 27th, 2025 @ 12:00 EST</a>!</th>
+                    <th colspan="3" class="bg-info">Qualifying Ends at <a href="https://time.is/compare/1200AM_27_July_2025_in_New_York" target="_blank">July 27th, 2025 @ 12:00 AM EST</a>!</th>
                 </tr>
             </thead>
             <thead>
