Fixed issue with il runs with multiple categories

--- a/srlc/srl/templates/srl/tourney.html
+++ b/srlc/srl/templates/srl/tourney.html
@@ -41,8 +41,8 @@
                         <h3 id="timeline">Season Timeline:</h3>
                         <ul>
                             <li><s>Now - July 18: Speedrun Embargo (Enjoy the game!!)</s></li>
-                            <li>July 16 - July 27: Qualifying</li>
-                            <li>July 27: Seeding + Final Checks</li>
+                            <li><s>July 16 - July 27: Qualifying</s></li>
+                            <li><s>July 27: Seeding + Final Checks</s></li>
                             <li>July 28 - ???: Tournament</li>
                         </ul>
                         <hr />
@@ -163,6 +163,7 @@
                                     <li>If times cannot align, you have the option to perform an "Async" run. Check the <a hre="#async">Async section</a> for information.</li>
                                 </ul>
                             </li>
+                            <li>For non-streamed matches, referees aren't required. However, both runners are required to stream their runs (with VODs enabled!!) to Twitch or YouTube for verification.</li>
                             <li>If you decided on a time and need to change it later (life happens), let both your opponent and referee know (especially if it is a streamed match).</li>
                             <li>All server rules apply to streamed matches. You will be disqualified immediately and banned from the server - regardless of seed, placement, or current round - if you are a fucking idiot.</li>
                         </ul>
