--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -187,7 +187,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: red;">THPS3+4 Tournament</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item" href="/tournament">Rules & Info</a></li>
-                    <li><a class="dropdown-item" href="/tournament/lb">Leaderboard/Seeding</a></li>
+                    <li><a class="dropdown-item" href="/tournament/bracket" target="_blank">Brackets</a></li>
                 </ul>
             </li>
         </ul>
