Added 3+4 CE IL board to navbar

--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -38,6 +38,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="/thps4ce/all">THPS4 CE</a></li>
                                     <li><a class="dropdown-item" href="/thps12ce/all">THPS1+2 CE</a></li>
+                                    <li><a class="dropdown-item" href="/thps34ce/all">THPS3+4 CE</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -130,6 +131,7 @@
                         <ul class="dropdown-menu dropdown-submenu">
                             <li><a class="dropdown-item" href="/thps4ce/ils">THPS4 CE</a></li>
                             <li><a class="dropdown-item" href="/thps12ce/ils">THPS1+2 CE</a></li>
+                            <li><a class="dropdown-item" href="/thps34ce/ils">THPS3+4 CE</a></li>
                         </ul>
                     </li>
                 </ul>
