--- a/srlc/srl/templates/srl/main.html
+++ b/srlc/srl/templates/srl/main.html
@@ -116,17 +116,14 @@
                                         {% endwith %}
                                     </td>
                                     {% if wr.player.countrycode %}
-                                        {% if wr.player.countrycode.id == "vh" %}
-                                            <td class="side-table-td"><img src="{% static 'srl/misc/vh.png'%}" title="Valhalla" onerror="this.onerror=null; this.src=''" height="15" />
-                                        {% else %}
-                                            <td class="side-table-td"><img src="https://flagcdn.com/h20/{{ wr.player.countrycode.id }}.png" title="{{ wr.player.countrycode.name }}" onerror="this.onerror=null; this.src=''" height="15" />
-                                        {% endif %}
+                                        <td class="side-table-td"><img src="https://flagcdn.com/h20/{{ wr.player.countrycode.id }}.png" title="{{ wr.player.countrycode.name }}" onerror="this.onerror=null; this.src=''" height="15" />
                                             {% if wr.player.nickname %}
                                                 <a href="/player/{{ wr.player.name }}">{{ wr.player.nickname }}</a></td>
                                             {% else %}
                                                 <a href="/player/{{ wr.player.name }}">{{ wr.player.name }}</a></td>
                                             {% endif %}
                                     {% else %}
+                                        <td class="side-table-td">
                                         {% if wr.player.nickname %}
                                             <a href="/player/{{ wr.player.name }}">{{ wr.player.nickname }}</a></td>
                                         {% else %}
